<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>net.generalpashon</groupId>
  <artifactId>jpize-engine</artifactId>
  <version>23.12.1</version>
  <description>Java Game Engine</description>
  <packaging>pom</packaging>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.10.1</version>
        <configuration>
          <source>17</source>
          <target>17</target>
          <compilerArgs>
            <arg>--add-exports=java.base/jdk.internal.util=ALL-UNNAMED</arg>
            <arg>--add-opens=java.base/jdk.internal.util=ALL-UNNAMED</arg>
          </compilerArgs>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <modules>
    <module>core</module>
    <module>net</module>
    <module>physic</module>
    <module>ui</module>
  </modules>

</project>
